# NovaRave32

./: )  Cargo.toml  build.sh  justfile  package-lock.json  package.json
.cargo/: config.toml
multitool/: Cargo.toml
multitool/src/: audio.rs  cart.rs  main.rs  model.rs  score.rs  utils.rs
nr32-common/: Cargo.toml  common.ld
nr32-common/src/: bootscript.rs  error.rs  lib.rs  memmap.rs  syscall.rs
nr32-demo/: Cargo.toml  memory.x
nr32-demo/src/: gpu.rs  main.rs  syscall.rs
nr32-demo/src/assets/: beach.nr3d  key.nrad  ship.nr3d
nr32-rt/: Cargo.toml  memory.x
nr32-rt/src/: allocator.rs  asm.rs  bootscript.rs  console.rs  dma.rs  input_dev.rs  lib.rs  lock.rs  main.rs  queue.rs  scheduler.rs  syscall.rs  syscalls.rs  utils.rs
nr32-rt/src/math/: angle.rs  fp32.rs  matrix.rs  vec.rs
nr32-sys/: Cargo.toml  build.rs  memory.x
nr32-sys/src/: adler32.rs  allocator.rs  dma.rs  fs.rs  gpu.rs  lib.rs  logger.rs  math.rs  sync.rs  syscall.rs  thread.rs
nr32-sys/src/math/: fp32.rs
nr32-sys/src/sync/: fifo.rs  semaphore.rs
nr32-web/: .prettierrc  eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.ts
nr32-web/src/: audio-worklet.ts  console.ts  emulator.ts  gl.ts  main.ts  shared-fifo.ts  style.css
nr32-web/src/shaders/: nora.frag.glsl  nora.vert.glsl  screen.frag.glsl  screen.vert.glsl
nr32boot/: Cargo.toml  README.md  build-rom.sh  build.rs  memory.x
nr32boot/.cargo/: config.toml
nr32boot/src/: asm.rs  gpu.rs  main.rs  math.rs  scheduler.rs  start.rs  syscalls.rs  tasks.rs  utils.rs
nr32boot/src/assets/: A440.nrad  beach.nr3d  ship.nr3d
nr32boot/src/math/: angle.rs  fp32.rs  matrix.rs  vec.rs
nr32boot/src/tasks/: idle.rs  main.rs
nr32boot/src/tasks/assets/: beach.nr3d  ship.nr3d
src/: cpu.rs  dma.rs  fifo.rs  gpu.rs  input_dev.rs  irq.rs  lib.rs  main.rs  simple_rand.rs  spu.rs  sync.rs  systimer.rs
src/cpu/: decoder.rs
src/input_dev/: touchscreen.rs
src/spu/: fir.rs
www/: index.html  nora32.js  nora32audio.js  style.css
