[package]
name = "novarave32"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_log" ]

[dependencies]
log = "0.4"
console_log = { version = "1.0", optional = true }
cfg-if = "1.0"
static_assertions = "1.1"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
glam = "0.30"
js-sys = "0.3"
