[package]
name = "novarave32"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_log" ]

[dependencies]
cfg-if = "1.0"
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0", optional = true }
glam = "0.30"
js-sys = "0.3"
log = "0.4"
nr32-common = { path = "nr32-common" }
static_assertions = "1.1"
wasm-bindgen = "0.2"
