[package]
name = "multitool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
byteorder = "1.5.0"
clap = { version = "4.5.31", features = ["derive"] }
cpal = "0.15.3"
env_logger = "0.11.6"
gltf = "1.4.1"
goblin = "0.10"
humansize = "2"
log = "0.4.26"
rubato = "0.16.1"
symphonia = { version = "0.5.4", features = ["wav", "flac", "ogg", "mp3"] }
