[package]
name = "nr32-demo"
version = "0.1.0"
edition = "2021"
description = "NovaRave32 demo application"

[dependencies]
log = "0.4"
nr32-sys = { path = "../nr32-sys" }

[profile.dev]
panic = "abort"
# opt-level = 3
incremental = true
overflow-checks = true
lto = true

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
overflow-checks = false
