[package]
name = "nr32-rt"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"

[dependencies.riscv]
version = "0.12"

[profile.dev]
panic = "abort"
# opt-level = 3
incremental = true
overflow-checks = true
lto = true

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
overflow-checks = false
