[package]
name = "nr32boot"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
nr32-rt = { path = "../nr32-rt" }

[profile.dev]
panic = "abort"
# opt-level = 3
incremental = true
overflow-checks = true
lto = true

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
overflow-checks = false
